<resources>
    <string name="app_name">Chat Map</string>
    <string name="action_settings">Settings</string>

    <!-- global-->
    <string name="done">Done</string>

    <!-- login -->
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="loginBtn">login</string>
    <string name="createAccBtn">create account</string>
    <string name="splitter">|</string>

    <!-- create user dialog strings -->
    <string name="contacting_firebase">Contacting Firebase</string>
    <string name="creating_user_account">Creating User Account</string>
    <string name="email_taken">Email taken</string>

    <!-- login validation strings -->
    <string name="authenticating">Authenticating</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="user_does_not_exist">User does not exist</string>

    <!-- identity creator -->
    <string name="addPhoto">TAKE YOUR PHOTO OR ADD AN IMAGE</string>
    <string name="usernameLabel">Username</string>

    <!-- chat map list fragment -->
    <string name="invites">invites</string>
    <string name="map_signal_im_descrp">image of map with radio signal</string>
    <string name="create_chat_map_text">CREATE CHAT MAP</string>
    <string name="map">MAP</string>
    <string name="timeRemainingLabel">DAYS : HRS : MINS : SEC</string>

    <!-- map creator -->
    <string name="set_location">SET LOCATION</string>
    <string name="set_date_time">SET DATE TIME</string>
    <string name="add_contacts">ADD CONTACTS</string>

    <string name="back_to_list_btn">back to map list</string>
    <string name="map_view_image">image of a map</string>
    <string name="done_btn">done button</string>
    <string name="set_map_btn">create map button</string>
    <string name="set_date_time_btn">set date and time</string>
    <string name="add_contacts_btn">add contacts btn</string>

    <!-- map location -->
    <string name="back_map_creator_btn">back to map creator button</string>
    <string name="search_location">Search for location</string>
    <string name="set_map_name_hint">Give your meeting place a name</string>
    <string name="set_map_pin_btn">Set map pin button</string>

    <!-- add contacts -->
    <string name="sendMsgBtn">Send messsage to selected contacts button</string>
    <string name="i">i</string>
    <string name="newContactsBtn">Add new contacts button</string>
    <string name="sendInvite">Send Invite</string>
    <string name="userIconContactsImage">User Icon</string>
    <string name="addContactInstruction">add from previous contacts below or add new</string>

    <!-- map invite -->
    <string name="chat_map_ic_dscrp">Chat Map Icon</string>
    <string name="message">Message</string>
    <string name="time">Time: 18:00</string>
    <string name="date">1 January 2017</string>
    <string name="message_hint">Send a short message with your map invite</string>

    <!-- chat map -->
    <string name="mic_button_description">mic button</string>
    <string name="record_timer">5</string>
    <string name="title_activity_maps">Map</string>

   <!--map location activity-->
    <string name="no_location_detected">No location detected</string>
    <string name="unable_to_find_location">Unable to find location</string>
    <string name="confirm_map_name">OK</string>
    <string name="cancel">Cancel</string>

</resources>
